fixed `.team-block` from squishing text on small viewports

--- a/src/styles/components/teamblock.scss
+++ b/src/styles/components/teamblock.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2rem;
-  @include breakpoint(xs){
+  @include breakpoint(xs) {
     grid-template-columns: 1fr;
     grid-gap: 3rem;
   }
@@ -10,11 +10,10 @@
 
 .team-block {
   display: flex;
-  height: 235px;
-  @include breakpoint(xs){
-   margin-right:10px;
-   margin-left:10px;
-   display:block;
+  @include breakpoint(xs) {
+    margin-right: 10px;
+    margin-left: 10px;
+    display: block;
   }
   .team-thumbnail-container {
     width: 10rem;
@@ -22,10 +21,10 @@
     background-color: whitesmoke;
     position: relative;
     margin-right: 2rem;
-    @include breakpoint(xs){
-      width:7rem;
-      height:7rem;
-      float:left;
+    @include breakpoint(xs) {
+      width: 7rem;
+      height: 7rem;
+      float: left;
     }
     div {
       position: absolute;
@@ -35,44 +34,41 @@
       right: 0;
       background-position: center;
       background-size: cover;
-      
     }
   }
 
   .team-text-container {
     flex: 1;
-   
+
     h3 {
       font-size: 1.5rem;
       font-weight: 800;
       text-transform: uppercase;
       margin-bottom: 1rem;
-      @include breakpoint(xs){
+      @include breakpoint(xs) {
         position: relative;
       }
     }
 
     p {
       line-height: 1.7;
-      @include breakpoint(xs){
-        line-height:1.3;
+      @include breakpoint(xs) {
+        line-height: 1.3;
         position: relative;
       }
     }
   }
 }
-.team-btn-con{
-
-
-  .team-btn{
-    width:100%;
-    height:100px;
-    background-color:#202020;
-    font-size:1.5rem;
+.team-btn-con {
+  .team-btn {
+    width: 100%;
+    height: 100px;
+    background-color: #202020;
+    font-size: 1.5rem;
     position: relative;
-    right:50%;
-    @include breakpoint(xs){
-      right:0;
+    right: 50%;
+    @include breakpoint(xs) {
+      right: 0;
     }
   }
 }
